--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "dflydev/markdown": "dev-master"
+        "dflydev/markdown": "dev-master",
         "php": ">=5.3"
     },
     "autoload": {
