--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "dflydev/markdown": "dev-master",
+        "dflydev/markdown": "1.0.*@dev",
         "php": ">=5.3"
     },
     "autoload": {
