--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
         }
     ],
     "require": {
-        "erusev/parsedown": "dev-master",
-        "php": ">=5.3"
+        "php": ">=5.3",
+        "erusev/parsedown": "dev-master"
     },
     "autoload": {
         "psr-0": { "romaninsh\\mdcms": "lib" }
