--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         "reference": "origin/master"
     },
     "require": {
-        "php": ">=5.3",
-        "erusev/parsedown": "dev-master"
+        "erusev/parsedown": "dev-master",
+        "php": ">=5.3"
     },
     "repositories": [
         {
